fixed some isues with the lists and changed some texts to black to make them more visible

--- a/web/style.css
+++ b/web/style.css
@@ -433,13 +433,17 @@ a.contact {
   max-width: 300px;
   text-align: center;
   min-height: 150px;
-  max-height: 180px;
+  max-height: 350px;
   top: 0;
   left: 0;
   padding: 20px;
   background: white;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   z-index: 10;
+}
+
+.blackText{
+  color:black;
 }
 
 .flexGraphContainer {
